fixes bug 193267 "Code cleanup for nsSocketTransport2.cpp" r=dougt sr=bz a=asa